--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:web-app": "node dist/web-app/server/server.mjs"
+    "start": "node dotenv.js && ng serve",
+    "build": "node dotenv.js && ng build",
+    "watch": "node dotenv.js && ng build --watch --configuration development",
+    "test": "node dotenv.js && ng test",
+    "serve:ssr:web-app": "node dotenv.js && node dist/web-app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "dotenv": "^16.4.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
