--- a/web-app/angular.json
+++ b/web-app/angular.json
@@ -21,8 +21,9 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               "src/favicon.ico",
-              "src/assets"
+              "src/web.config"
             ],
             "styles": [
               "src/styles.css"
